fix: scroll bar covered by rt-handle

--- a/src/ui/MessagesView/ResizableTable.scss
+++ b/src/ui/MessagesView/ResizableTable.scss
@@ -30,7 +30,7 @@ table.rt-table {
   display: block;
   position: absolute;
   cursor: col-resize;
-  width: 7px;
+  width: 2px;
   right: 0;
   top: 0;
   z-index: 1;
